up to neumann discretization in chapter 4

--- a/dissertation/bib/DG.bib
+++ b/dissertation/bib/DG.bib
@@ -1,7 +1,7 @@
 %doi = {10.1002/nme.2312},
 @article{Lew.Adrian08,
  author = {Adri\'{a}n J. Lew and Gustavo C. Buscaglia},
- title = {A discontinuous-galerkin-based immersed boundary method},
+ title = {A discontinuous-{G}alerkin-based immersed boundary method},
  journal = {Int. J. Numer. Meth. Engng},
  volume = {76},
  issue = {4},
@@ -14,7 +14,7 @@
 %doi = {10.1002/cnm.1132},
 @article{Guyomarch09,
  author = {Gr\'{e}gory Guyomarc'h and Chang-Ock Lee and Kiwan Jeon},
- title = {A discontinuous Galerkin method for elliptic interface problems with application to electroporation},
+ title = {A discontinuous {G}alerkin method for elliptic interface problems with application to electroporation},
  journal = {Commun. Numer. Meth. Engng},
  month = {October},
  year = {2009},
