--- a/dissertation/bib/FEM_LM.bib
+++ b/dissertation/bib/FEM_LM.bib
@@ -4,7 +4,7 @@
 @article {Babuska73,
    author = {Babu\v{s}ka, Ivo},
    affiliation = {Institut for Fluid Dynamic and Applied Mathematics University of Maryland 20742 College Park U.S.A.},
-   title = {The finite element method with lagrangian multipliers},
+   title = {The finite element method with {L}agrangian multipliers},
    journal = {Numerische Mathematik},
    publisher = {Springer Berlin / Heidelberg},
    issn = {0029-599X},
@@ -21,7 +21,7 @@
 @article {Pitkaranta79,
    author = {Pitk\"{a}ranta, Juhani},
    affiliation = {Institute of Mathematics Helsinki University of Technology SF-02150 Espoo 15 Finland},
-   title = {Boundary subspaces for the finite element method with lagrange multipliers},
+   title = {Boundary subspaces for the finite element method with {L}agrange multipliers},
    journal = {Numerische Mathematik},
    publisher = {Springer Berlin / Heidelberg},
    issn = {0029-599X},
