--- a/dissertation/bib/FEM_adaptive.bib
+++ b/dissertation/bib/FEM_adaptive.bib
@@ -23,7 +23,7 @@
 %acmid = {1553079},
 @article{Chen.Zhiming09,
  author = {Chen, Zhiming and Xiao, Yuanming and Zhang, Linbo},
- title = {The adaptive immersed interface finite element method for elliptic and maxwell interface problems},
+ title = {The adaptive immersed interface finite element method for elliptic and {M}axwell interface problems},
  journal = {J. Comput. Phys.},
  volume = {228},
  issue = {14},
