--- a/dissertation/bib/FEM_conforming.bib
+++ b/dissertation/bib/FEM_conforming.bib
@@ -44,7 +44,7 @@
 
 @article{Cockburn09,
  author = {Bernardo Cockburn and Jayadeep Gopalakrishnan and Raytcho Lazarov},
- title = {Unified hybridization of discontinuous Galerkin, mixed, and conforming Galerkin methods for second order elliptic problems},
+ title = {Unified hybridization of discontinuous {G}alerkin, mixed, and conforming {G}alerkin methods for second order elliptic problems},
  journal = {SIAM J. Numer. Anal.},
  volume = {47},
  issue = {2},
