--- a/dissertation/bib/FEM_nonconforming.bib
+++ b/dissertation/bib/FEM_nonconforming.bib
@@ -20,7 +20,7 @@
 %doi = {10.1016/S0045-7825(02)00524-8},
 @article{Hansbo02,
  author = {Anita Hansbo and Peter Hansbo},
- title = {An unfitted finite element method, based on nitsche's method, for elliptic interface problems},
+ title = {An unfitted finite element method, based on {N}itsche's method, for elliptic interface problems},
  journal = {Comput. Methods Appl. Mech. Engrg.},
  month = {November},
  year = {2002},
@@ -34,7 +34,7 @@
 %doi = {10.1.1.45.5260},
 @ARTICLE{Li.Zhilin03,
     author = {Zhilin Li and Tao Lin and Xiaohui Wu},
-    title = {New cartesian grid methods for interface problems using the finite element formulation},
+    title = {New {C}artesian grid methods for interface problems using the finite element formulation},
     journal = {NUMERISCHE MATHEMATIK},
     year = {2003},
     volume = {96},
@@ -71,7 +71,7 @@
 %doi = {10.1002/nme.1788},
 @article{Mourad07,
  author = {Hashem M. Mourad and John Dolbow and Isaac Harari},
- title = {A bubble-stabilized finite element method for dirichlet constraints on embedded interfaces},
+ title = {A bubble-stabilized finite element method for {D}irichlet constraints on embedded interfaces},
  journal = {Int. J. Numer. Meth. Engng},
  volume = {69},
  issue = {4},
@@ -84,7 +84,7 @@
 %doi = {10.1016/j.cma.2008.02.033},
 @article{Dolbow08,
  author = {Dolbow, J.E. and Franca, L.P.},
- title = {Residual-free bubbles for embedded dirichlet problems},
+ title = {Residual-free bubbles for embedded {D}irichlet problems},
  journal = {Comput. Methods Appl. Mech. Engrg.},
  volume = {197},
  issue = {45--48},
@@ -144,23 +144,23 @@ keywords = "Variational methods"
 %url = {http://dx.doi.org/10.1007/s00466-009-0457-5},
 %note = {10.1007/s00466-009-0457-5},
 @article {Harari10,
-   author = {Harari, Isaac and Dolbow, John},
-   affiliation = {Tel Aviv University Faculty of Engineering 69978 Ramat Aviv Israel},
-   title = {Analysis of an efficient finite element method for embedded interface problems},
-   journal = {Computational Mechanics},
-   publisher = {Springer Berlin / Heidelberg},
-   issn = {0178-7675},
-   keyword = {Computer Science},
-   pages = {205-211},
-   volume = {46},
-   issue = {1},
-   year = {2010}
+author = {Harari, Isaac and Dolbow, John},
+affiliation = {Tel Aviv University Faculty of Engineering 69978 Ramat Aviv Israel},
+title = {Analysis of an efficient finite element method for embedded interface problems},
+journal = {Computational Mechanics},
+publisher = {Springer Berlin / Heidelberg},
+issn = {0178-7675},
+keyword = {Computer Science},
+pages = {205-211},
+volume = {46},
+issue = {1},
+year = {2010}
 }
 
 %kwak:2117,
 %url = {http://link.aip.org/link/?SNA/48/2117/1},
 %doi = {10.1137/080728056},
-@article{Kwak.DoY.10,
+@article{Kwak.DoY10,
 author = {Do Y. Kwak and Kye T. Wee and Kwang S. Chang},
 collaboration = {},
 title = {An Analysis of a Broken $P_1$-Nonconforming Finite Element Method for Interface Problems},
@@ -184,7 +184,7 @@ doi=""
 
 @article{Richardson11,
  author = {Casey L. Richardson and Jan Hegemann and Eftychios Sifakis and Jeffrey Hellrung and Joseph M. Teran},
- title = {An XFEM method for modeling geometrically elaborate crack propagation in brittle materials},
+ title = {An {XFEM} method for modeling geometrically elaborate crack propagation in brittle materials},
  journal = {Int. J. Numer. Meth. Engng},
  month = {December},
  year = {2011},
