--- a/dissertation/bib/FVM.bib
+++ b/dissertation/bib/FVM.bib
@@ -4,7 +4,7 @@
 %acmid = {305470},
 @article{Johansen98,
  author = {Johansen, Hans and Colella, Phillip},
- title = {A cartesian grid embedded boundary method for poisson's equation on irregular domains},
+ title = {A {C}artesian grid embedded boundary method for {P}oisson's equation on irregular domains},
  journal = {J. Comput. Phys.},
  volume = {147},
  issue = {1},
@@ -17,13 +17,31 @@
  address = {San Diego, CA, USA},
 }
 
+%Bijelonja20066378
+%doi = "10.1016/j.cma.2006.01.005",
+%url = "http://www.sciencedirect.com/science/article/pii/S0045782506000387",
+@article{Bijelonja06,
+title = "A finite volume method for incompressible linear elasticity",
+journal = "Computer Methods in Applied Mechanics and Engineering",
+volume = "195",
+number = "44–47",
+pages = "6378 - 6390",
+year = "2006",
+note = "",
+issn = "0045-7825",
+author = "I. Bijelonja and I. Demirdžic and S. Muzaferija",
+keywords = "Finite volume method",
+keywords = "Incompressible body",
+keywords = "Elasticity"
+}
+
 %Oevermann:2006:CGF:1219166.1219368,
 %url = {http://portal.acm.org/citation.cfm?id=1219166.1219368},
 %doi = {10.1016/j.jcp.2006.04.010},
 %acmid = {1219368},
 @article{Oevermann06,
  author = {Oevermann, M. and Klein, R.},
- title = {A cartesian grid finite volume method for elliptic equations with variable coefficients and embedded interfaces},
+ title = {A {C}artesian grid finite volume method for elliptic equations with variable coefficients and embedded interfaces},
  journal = {J. Comput. Phys.},
  volume = {219},
  issue = {2},
@@ -43,7 +61,7 @@
 %acmid = {1141742},
 @article{Schwartz06,
  author = {Schwartz, Peter and Barad, Michael and Colella, Phillip and Ligocki, Terry},
- title = {A cartesian grid embedded boundary method for the heat equation and poisson's equation in three dimensions},
+ title = {A {C}artesian grid embedded boundary method for the heat equation and {P}oisson's equation in three dimensions},
  journal = {J. Comput. Phys.},
  volume = {211},
  issue = {2},
@@ -57,13 +75,34 @@
  keywords = {02.60.Lj, 02.70.Bf, 41.05.+e, 41.20.Cv, Heat equation, Multigrid methods, Poisson equation},
 }
 
+%BeiraodaVeiga:2009:MFD:1595071.1595206
+%url = {http://dx.doi.org/10.1016/j.jcp.2009.06.034},
+%doi = {10.1016/j.jcp.2009.06.034},
+%acmid = {1595206},
+@article{BeiraodaVeiga09,
+ author = {Beir\~{a}o da Veiga, L. and Gyrya, V. and Lipnikov, K. and Manzini, G.},
+ title = {Mimetic finite difference method for the {S}tokes problem on polygonal meshes},
+ journal = {J. Comput. Phys.},
+ issue_date = {October, 2009},
+ volume = {228},
+ number = {19},
+ month = oct,
+ year = {2009},
+ issn = {0021-9991},
+ pages = {7215--7232},
+ numpages = {18},
+ publisher = {Academic Press Professional, Inc.},
+ address = {San Diego, CA, USA},
+ keywords = {Incompressible Stokes equations, Mimetic discretization, Polygonal mesh},
+}
+
 %Oevermann:2009:SIF:1552584.1553097,
 %url = {http://portal.acm.org/citation.cfm?id=1552584.1553097},
 %doi = {10.1016/j.jcp.2009.04.018},
 %acmid = {1553097},
 @article{Oevermann09,
  author = {Oevermann, M. and Scharfenberg, C. and Klein, R.},
- title = {A sharp interface finite volume method for elliptic equations on cartesian grids},
+ title = {A sharp interface finite volume method for elliptic equations on {C}artesian grids},
  journal = {J. Comput. Phys.},
  volume = {228},
  issue = {14},
@@ -79,7 +118,7 @@
 
 @article{Crockett10,
  author = {R. K. Crockett and P. Colella and D. T. Graves},
- title = {A Cartesian grid embedded boundary method for solving the poisson and heat equations with discontinuous coefficients in three dimensions},
+ title = {A {C}artesian grid embedded boundary method for solving the {P}oisson and heat equations with discontinuous coefficients in three dimensions},
  month = {June},
  year = {2010},
  publisher = {Lawrence Berkeley National Laboratory},
