--- a/dissertation/bib/GFM.bib
+++ b/dissertation/bib/GFM.bib
@@ -4,7 +4,7 @@
 %acmid = {346432},
 @article{Liu.Xu-Dong00,
  author = {Liu, Xu-Dong and Fedkiw, Ronald P. and Kang, Myungjoo},
- title = {A boundary condition capturing method for poisson's equation on irregular domains},
+ title = {A boundary condition capturing method for {P}oisson's equation on irregular domains},
  journal = {J. Comput. Phys.},
  volume = {160},
  issue = {1},
@@ -23,7 +23,7 @@
 %acmid = {584775},
 @article{Gibou02,
  author = {Gibou, Frederic and Fedkiw, Ronald P. and Cheng, Li-Tien and Kang, Myungjoo},
- title = {A second-order-accurate symmetric discretization of the poisson equation on irregular domains},
+ title = {A second-order-accurate symmetric discretization of the {P}oisson equation on irregular domains},
  journal = {J. Comput. Phys.},
  volume = {176},
  issue = {1},
@@ -37,11 +37,11 @@
 }
 
 @article{McAdams10,
-     author = {A. McAdams and E. Sifakis and J. Teran}, 
-     title = {A Parallel Multigrid Poisson Solver for Fluids Simulation on Large Grids},
-     journal = {ACM SIGGRAPH/Eurograph Symp Comput Anim},
-     pages = {1-10},
-     year={2010}
+author = {A. McAdams and E. Sifakis and J. Teran}, 
+title = {A Parallel Multigrid {P}oisson Solver for Fluids Simulation on Large Grids},
+journal = {ACM SIGGRAPH/Eurograph Symp Comput Anim},
+pages = {1-10},
+year={2010}
 }
 
 %Liu:2003:CGF:950414.950423
@@ -69,7 +69,7 @@
 %acmid = {1065571},
 @article{Gibou05,
  author = {Gibou, Fr\'{e}d\'{e}ric and Fedkiw, Ronald},
- title = {A fourth order accurate discretization for the laplace and heat equations on arbitrary domains, with applications to the stefan problem},
+ title = {A fourth order accurate discretization for the {L}aplace and heat equations on arbitrary domains, with applications to the {S}tefan problem},
  journal = {J. Comput. Phys.},
  volume = {202},
  issue = {2},
@@ -108,7 +108,7 @@
 %acmid = {1065568},
 @article{Jomaa05,
  author = {Jomaa, Z. and Macaskill, C.},
- title = {The embedded finite difference method for the poisson equation in a domain with an irregular boundary and dirichlet boundary conditions},
+ title = {The embedded finite difference method for the {P}oisson equation in a domain with an irregular boundary and {D}irichlet boundary conditions},
  journal = {J. Comput. Phys.},
  volume = {202},
  issue = {2},
@@ -167,7 +167,7 @@
 %acmid = {1660322},
 @article{Papac10,
  author = {Papac, Joseph and Gibou, Fr\'{e}d\'{e}ric and Ratsch, Christian},
- title = {Efficient symmetric discretization for the poisson, heat and stefan-type problems with robin boundary conditions},
+ title = {Efficient symmetric discretization for the {P}oisson, heat and {S}tefan-type problems with {R}obin boundary conditions},
  journal = {J. Comput. Phys.},
  volume = {229},
  issue = {3},
