--- a/dissertation/bib/IIM.bib
+++ b/dissertation/bib/IIM.bib
@@ -42,7 +42,7 @@
 %url = {http://portal.acm.org/citation.cfm?id=275914.275958},
 %doi = {10.1137/S0036142995291329},
 %acmid = {275958},
-@article{Li.Zhilin98.02,
+@article{Li.Zhilin98a,
  author = {Li, Zhilin},
  title = {A fast iterative algorithm for elliptic interface problems},
  journal = {SIAM J. Numer. Anal.},
@@ -62,7 +62,7 @@
 %url = {http://portal.acm.org/citation.cfm?id=284714.284720},
 %doi = {10.1016/S0168-9274(98)00015-4},
 %acmid = {284720},
-@article{Li.Zhilin98.07,
+@article{Li.Zhilin98b,
  author = {Li, Zhilin},
  title = {The immersed interface method using a finite element formulation},
  journal = {Appl. Numer. Math.},
@@ -102,7 +102,7 @@
 %url = {http://portal.acm.org/citation.cfm?id=587154.587233},
 %doi = {10.1137/S1064827500370160},
 %acmid = {587233},
-@article{Li.Zhilin_Ito.Kazufumi01,
+@article{Li.Zhilin01a,
  author = {Li, Zhilin and Ito, Kazufumi},
  title = {Maximum principle preserving schemes for interface problems with discontinuous coefficients},
  journal = {SIAM J. Sci. Comput.},
@@ -122,9 +122,9 @@
 %url = {http://portal.acm.org/citation.cfm?id=509294.509310},
 %doi = {10.1006/jcph.2001.6813},
 %acmid = {509310},
-@article{Li.Zhilin_Lai.Ming-Chih01,
+@article{Li.Zhilin01b,
  author = {Li, Zhilin and Lai, Ming-Chih},
- title = {The immersed interface method for the Navier-Stokes equations with singular forces},
+ title = {The immersed interface method for the {N}avier-{S}tokes equations with singular forces},
  journal = {J. Comput. Phys.},
  volume = {171},
  issue = {2},
@@ -184,7 +184,7 @@
 %acmid = {954476},
 @article{Lee.Long03,
  author = {Lee, Long and LeVeque, Randall J.},
- title = {An immersed interface method for incompressible navier-stokes equations},
+ title = {An immersed interface method for incompressible {N}avier-{S}tokes equations},
  journal = {SIAM J. Sci. Comput.},
  volume = {25},
  issue = {3},
@@ -238,11 +238,22 @@
  keywords = {Cartesian grid, discontinuous coefficients, elliptic interface problem, finite difference method, immersed interface method, irregular domain, level set method},
 }
 
+@article{Rutka04,
+title={A fast finite difference method for elliptic {PDE}s in domains with non-grid aligned boundaries with application to 3{D} linear elasticity},
+author={Rutka, V. and Wiegmann, A. },
+journal={MATHEMATICS IN INDUSTRY},
+year={2004},
+volume={5},
+pages={363--366},
+publisher={SPRINGER SCIENCE + BUSINESS MEDIA},
+issn={1612-3956},
+}
+
 %Wan:2004:BCM:996978.997047,
 %url = {http://portal.acm.org/citation.cfm?id=996978.997047},
 %doi = {10.1137/S1064827503428540},
 %acmid = {997047},
-@article{Wan.Justin.W.L.04,
+@article{Wan.Justin04,
  author = {Wan, Justin W. L. and Liu, Xu-Dong},
  title = {A Boundary Condition--Capturing Multigrid Approach to Irregular Boundary Problems},
  journal = {SIAM J. Sci. Comput.},
@@ -281,19 +292,19 @@
 %Beale_onthe,
 %doi = {10.1.1.66.3420},
 @ARTICLE{Beale06,
-    author = {J. Thomas Beale and Anita T. Layton},
-    title = {On the accuracy of finite difference methods for elliptic problems with interfaces},
-    journal = {Commun. Appl. Math. Comput. Sci.},
-    year = {2006},
-    volume = {1},
-    pages = {91--119}
+author = {J. Thomas Beale and Anita T. Layton},
+title = {On the accuracy of finite difference methods for elliptic problems with interfaces},
+journal = {Commun. Appl. Math. Comput. Sci.},
+year = {2006},
+volume = {1},
+pages = {91--119}
 }
 
 %Le:2006:IIM:1221587.1221853
 %url = {http://portal.acm.org/citation.cfm?id=1221587.1221853},
 %doi = {10.1016/j.jcp.2006.05.004},
 %acmid = {1221853},
-@article{Le.D.V06,
+@article{Le.DV06,
  author = {Le, D. V. and Khoo, B. C. and Peraire, J.},
  title = {An immersed interface method for viscous incompressible flows involving rigid and flexible boundaries},
  journal = {J. Comput. Phys.},
@@ -309,9 +320,9 @@
  keywords = {Cartesian grid method, Fast Poisson solvers, Finite difference, Fluid-membrane interaction, Immersed interface method, Irregular domains, Navier-Stokes equations},
 }
 
-@book{Li.Zhilin06,
+@book{Li.Zhilin06a,
  author = {Zhilin Li and Kazufumi Ito},
- title = {The immersed interface method: numerical solutions of pdes involving interfaces and irregular domains},
+ title = {The immersed interface method: numerical solutions of {PDE}s involving interfaces and irregular domains},
  series = {Frontiers in Applied Mathematics},
  volume = {33},
  publisher = {Society for Industrial and Applied Mathematics},
@@ -319,6 +330,15 @@
  year = {2006},
  month = {July},
  isbn = {978-0898716092},
+}
+
+@article{Li.Zhilin06b,
+title={An augmented approach for the pressure boundary condition in a {S}tokes flow},
+author={Zhilin Li and Xiaohai Wan and Kazufumi Ito and Sharon R. Lubkin},
+journal={Commun. Comput. Phys.},
+volume={1},
+year={2006},
+pages={874--885},
 }
 
 %Xu:2006:IIM:1159531.1159534
@@ -347,7 +367,7 @@
 %acmid = {1387532},
 @article{Chen.Tianbing08,
  author = {Chen, Tianbing and Strain, John},
- title = {Piecewise-polynomial discretization and Krylov-accelerated multigrid for elliptic interface problems},
+ title = {Piecewise-polynomial discretization and {K}rylov-accelerated multigrid for elliptic interface problems},
  journal = {J. Comput. Phys.},
  volume = {227},
  issue = {16},
@@ -385,7 +405,7 @@
 %doi = "DOI: 10.1016/j.cma.2007.06.012",
 %url = "http://www.sciencedirect.com/science/article/B6V29-4P5NX1S-1/2/be3e7243edf8e5cdba6d6e6f4cd80344",
 @article{Xu.Sheng08,
-title = "A 3D immersed interface method for fluid-solid interaction",
+title = "A 3{D} immersed interface method for fluid-solid interaction",
 journal = "Computer Methods in Applied Mechanics and Engineering",
 volume = "197",
 number = "25-28",
