--- a/dissertation/bib/KKT.bib
+++ b/dissertation/bib/KKT.bib
@@ -1,3 +1,95 @@
+%Bramble_Pasciak_1988
+%url={http://www.jstor.org/stable/2007912},
+@article{Bramble88,
+ title={Corrigenda: ``A preconditioning technique for indefinite systems resulting from mixed approximations of elliptic problems''},
+ volume={51},
+ number={181},
+ journal={Math Comp},
+ publisher={American Mathematical Society},
+ author={Bramble, James H and Pasciak, Joseph E},
+ year={1988},
+ pages={387--388}
+}
+
+%Klawonn95anoptimal
+@ARTICLE{Klawonn95,
+author = {Axel Klawonn},
+title = {An Optimal Preconditioner for a Class of Saddle Point Problems with a Penalty Term},
+journal = {SIAM J. Sci. Comput},
+year = {1995},
+volume = {19},
+pages = {540--552}
+}
+
+%Klawonn:1998:BPS:277965.277978
+%url = {http://dx.doi.org/10.1137/S1064827596303624},
+%doi = {10.1137/S1064827596303624},
+%acmid = {277978},
+@article{Klawonn98.1,
+ author = {Klawonn, Axel},
+ title = {Block-Triangular Preconditioners for Saddle Point Problems with a Penalty Term},
+ journal = {SIAM J. Sci. Comput.},
+ issue_date = {Jan. 1998},
+ volume = {19},
+ number = {1},
+ month = jan,
+ year = {1998},
+ issn = {1064-8275},
+ pages = {172--184},
+ numpages = {13},
+ publisher = {Society for Industrial and Applied Mathematics},
+ address = {Philadelphia, PA, USA},
+ keywords = {almost incompressible materials, block-triangular preconditioners, linear elasticity, penalty term, saddle point problems},
+}
+
+%Klawonn1998233
+%doi = "10.1016/S0045-7825(98)00059-0",
+%url = "http://www.sciencedirect.com/science/article/pii/S0045782598000590",
+@article{Klawonn98.2,
+title = "Overlapping {S}chwarz methods for mixed linear elasticity and {S}tokes problems",
+journal = "Computer Methods in Applied Mechanics and Engineering",
+volume = "165",
+number = "1–4",
+pages = "233 - 245",
+year = "1998",
+note = "",
+issn = "0045-7825",
+author = "Axel Klawonn and Luca F. Pavarino"
+}
+
+%DOI: 10.1002/1099-1506(200010/12)7:7/8<687::AID-NLA219>3.0.CO;2-S
+@article{Farhat00,
+  title={A scalable dual-primal domain decomposition method},
+  author={Charbel Farhat and Michael Lesoinne and Kendall Pierson},
+  journal={Numerical Linear Algebra with Applications},
+  volume={7},
+  number={7-8},
+  pages={687--714},
+  month={October-December},
+  year={2000},
+}
+
+%Dohrmann:2003:PSB:944296.945607
+%url = {http://dx.doi.org/10.1137/S1064827502412887},
+%doi = {10.1137/S1064827502412887},
+%acmid = {945607},
+@article{Dohrmann03,
+ author = {Dohrmann, Clark R.},
+ title = {A Preconditioner for Substructuring Based on Constrained Energy Minimization},
+ journal = {SIAM J. Sci. Comput.},
+ issue_date = {2003},
+ volume = {25},
+ number = {1},
+ month = jan,
+ year = {2003},
+ issn = {1064-8275},
+ pages = {246--258},
+ numpages = {13},
+ publisher = {Society for Industrial and Applied Mathematics},
+ address = {Philadelphia, PA, USA},
+ keywords = {FETI, balancing domain decomposition, domain decomposition, iterative methods, substructuring},
+}
+
 %Benzi05numericalsolution,
 %doi = {10.1.1.113.1671},
 @ARTICLE{Benzi05,
@@ -7,4 +99,25 @@
     year = {2005},
     volume = {14},
     pages = {1--137}
+}
+
+%Pavarino:2010:BPS:2078574.2078593
+%url = {http://dx.doi.org/10.1137/100791701},
+%doi = {10.1137/100791701},
+%acmid = {2078593},
+@article{Pavarino10,
+ author = {Pavarino, Luca F. and Widlund, Olof B. and Zampini, Stefano},
+ title = {{BDDC} Preconditioners for Spectral Element Discretizations of Almost Incompressible Elasticity in Three Dimensions},
+ journal = {SIAM J. Sci. Comput.},
+ issue_date = {October 2010},
+ volume = {32},
+ number = {6},
+ month = dec,
+ year = {2010},
+ issn = {1064-8275},
+ pages = {3604--3626},
+ numpages = {23},
+ publisher = {Society for Industrial and Applied Mathematics},
+ address = {Philadelphia, PA, USA},
+ keywords = {almost incompressible elasticity, balancing domain decomposition by constraints preconditioners, domain decomposition, mixed spectral elements},
 }
