--- a/dissertation/bib/MFEM.bib
+++ b/dissertation/bib/MFEM.bib
@@ -1,6 +1,6 @@
 @article{Belgacem99,
  author = {Faker B. Belgacem},
- title = {The mortar finite element method with lagrange multipliers},
+ title = {The mortar finite element method with {L}agrange multipliers},
  journal = {Numerische Mathematik},
  month = {December},
  year = {1999},
@@ -60,7 +60,7 @@
 %acmid = {1046281},
 @article{Dryja05,
  author = {Dryja, Maksymilian},
- title = {A Neumann-Neumann algorithm for a mortar discretization of elliptic problems with discontinuous coefficients},
+ title = {A {N}eumann-{N}eumann algorithm for a mortar discretization of elliptic problems with discontinuous coefficients},
  journal = {Numer. Math.},
  volume = {99},
  issue = {4},
