--- a/dissertation/bib/MG.bib
+++ b/dissertation/bib/MG.bib
@@ -1,9 +1,223 @@
+@article{Verfurth84,
+  title={A Multilevel Algorithm for Mixed Problems},
+  author={R. Verf\"{u}rth},
+  journal={SIAM J. on Numerical Analysis},
+  volume={21},
+  number={2},
+  pages={264--271},
+  month={April},
+  year={1984},
+  publisher={Society for Industrial and Applied Mathematics},
+}
+
+%Kocvara:1987:MMT:27532.27535
+%url = {http://dx.doi.org/10.1016/0096-3003(87)90034-8},
+%doi = {10.1016/0096-3003(87)90034-8},
+%acmid = {27535},
+@article{Kocvara87,
+ author = {Ko\v{c}vara, Michal and Mandel, Jan},
+ title = {A multigrid method for three-dimensional elasticity and algebraic convergence estimates},
+ journal = {Appl. Math. Comput.},
+ issue_date = {Aug. 1987},
+ volume = {23},
+ number = {2},
+ month = aug,
+ year = {1987},
+ issn = {0096-3003},
+ pages = {121--135},
+ numpages = {15},
+ publisher = {Elsevier Science Inc.},
+ address = {New York, NY, USA},
+}
+
+%Haung:1990:MAM:91037.91039
+%url = {http://dx.doi.org/10.1007/BF01386408},
+%doi = {10.1007/BF01386408},
+%acmid = {91039},
+@article{Haung90,
+ author = {Haung, Z.},
+ title = {A multi-grid algorithm for mixed problems with penalty},
+ journal = {Numer. Math.},
+ issue_date = {Jun. 1990},
+ volume = {57},
+ number = {3},
+ month = may,
+ year = {1990},
+ issn = {0029-599X},
+ pages = {227--247},
+ numpages = {21},
+ publisher = {Springer-Verlag New York, Inc.},
+ address = {Secaucus, NJ, USA},
+}
+
+%Brenner:1993:NMM:156373.156379
+%url = {http://dx.doi.org/10.1137/0730006},
+%doi = {10.1137/0730006},
+%acmid = {156379},
+@article{Brenner93,
+ author = {Brenner, Susanne C.},
+ title = {A nonconforming mixed multigrid method for the pure displacement problem in planar linear elasticity},
+ journal = {SIAM J. Numer. Anal.},
+ issue_date = {Feb. 1993},
+ volume = {30},
+ number = {1},
+ month = feb,
+ year = {1993},
+ issn = {0036-1429},
+ pages = {116--135},
+ numpages = {20},
+ publisher = {Society for Industrial and Applied Mathematics},
+ address = {Philadelphia, PA, USA},
+ keywords = {linear elasticity, mixed finite element, multigrid, nonconforming},
+}
+
+%Cai:1998:FSL:275914.275963
+%url = {http://dx.doi.org/10.1137/S0036142995294930},
+%doi = {10.1137/S0036142995294930},
+%acmid = {275963},
+@article{Cai.Zhiqiang98,
+ author = {Cai, Zhiqiang and Manteuffel, Thomas A. and McCormick, Stephen F. and Parter, Seymour V.},
+ title = {First-Order System Least Squares (FOSLS) for Planar Linear Elasticity: Pure Traction Problem},
+ journal = {SIAM J. Numer. Anal.},
+ issue_date = {Feb. 1998},
+ volume = {35},
+ number = {1},
+ month = feb,
+ year = {1998},
+ issn = {0036-1429},
+ pages = {320--335},
+ numpages = {16},
+ publisher = {Society for Industrial and Applied Mathematics},
+ address = {Philadelphia, PA, USA},
+ keywords = {Poisson ratio, least-squares discretization, linear elasticity, multigrid, pure traction},
+}
+
+%DOI: 10.1002/(SICI)1097-0207(19990228)44:6<801::AID-NME525>3.0.CO;2-Y
+@article{Axelsson99,
+  title={On a robust and scalable linear elasticity solver based on a saddle point formulation},
+  author={Owe Axelsson and Alexander Padiy},
+  journal={International Journal for Numerical Methods in Engineering},
+  volume={44},
+  number={6},
+  pages={801--818},
+  month={February},
+  year={1999},
+}
+
+%url={http://dx.doi.org/10.1007/s002110050419},
+@article{Hiptmair99,
+year={1999},
+issn={0029-599X},
+journal={Numerische Mathematik},
+volume={82},
+issue={2},
+doi={10.1007/s002110050419},
+title={Multilevel methods for mixed finite elements in three dimensions},
+publisher={Springer-Verlag},
+keywords={Mathematics Subject Classification (1991):65N30, 65N22, 65F10},
+author={Hiptmair, Ralf and Hoppe, Ronald H.W.},
+pages={253-279},
+language={English}
+}
+
+%springerlink:10.1007/s002110050465
+%url = {http://dx.doi.org/10.1007/s002110050465},
+@article{Schoberl99,
+author = {Sch\"{o}berl, Joachim},
+affiliation = {Johannes-Kepler-Universität, Institut für Mathematik, Altenberger Strasse 69, A-4040 Linz, Austria AT},
+title = {Multigrid methods for a parameter dependent problem in primal variables},
+journal = {Numerische Mathematik},
+publisher = {Springer Berlin / Heidelberg},
+issn = {0029-599X},
+keyword = {Mathematics and Statistics},
+pages = {97-119},
+volume = {84},
+issue = {1},
+note = {10.1007/s002110050465},
+year = {1999}
+}
+
+%Wieners:2000:RMM:345474.345475
+%url = {http://dx.doi.org/10.1007/s006070070026},
+%doi = {10.1007/s006070070026},
+%acmid = {345475},
+@article{Wieners00,
+ author = {Wieners, Christian},
+ title = {Robust multigrid methods for nearly incompressible elasticity},
+ journal = {Computing},
+ issue_date = {2000},
+ volume = {64},
+ number = {4},
+ month = jul,
+ year = {2000},
+ issn = {0010-485X},
+ pages = {289--306},
+ numpages = {18},
+ publisher = {Springer-Verlag New York, Inc.},
+ address = {New York, NY, USA},
+ keywords = {elasticity, robust multigrid methods},
+}
+
+%Heys:2004:FSL:992973.992981
+%url = {http://dx.doi.org/10.1016/j.jcp.2003.09.034},
+%doi = {10.1016/j.jcp.2003.09.034},
+%acmid = {992981},
+@article{Heys04,
+ author = {Heys, J. J. and Manteuffel, T. A. and McCormick, S. F. and Ruge, J. W.},
+ title = {First-order system least squares ({FOSLS}) for coupled fluid-elastic problems},
+ journal = {J. Comput. Phys.},
+ issue_date = {10 April 2004},
+ volume = {195},
+ number = {2},
+ month = apr,
+ year = {2004},
+ issn = {0021-9991},
+ pages = {560--575},
+ numpages = {16},
+ publisher = {Academic Press Professional, Inc.},
+ address = {San Diego, CA, USA},
+ keywords = {Navier-Stokes, coupled, elasticity, finite elements, least-squares, multigrid},
+}
+
+%DOI: 10.1002/nla.587
+@article{Gaspar08,
+title={Distributive smoothers in multigrid for problems with dominating grad–div operators},
+author={F. J. Gaspar and J. L. Gracia and F. J. Lisbona and C. W. Oosterlee},
+journal={Numerical Linear Algebra with Applications},
+volume={15},
+number={8},
+pages={661--683},
+month={October},
+year={2008},
+}
+
+%Lee:2009:RMM:1613613.1613614
+%url = {http://dx.doi.org/10.1007/s00211-009-0232-8},
+%doi = {10.1007/s00211-009-0232-8},
+%acmid = {1613614},
+@article{Lee.Young-Ju09,
+ author = {Lee, Young-Ju and Wu, Jinbiao and Chen, Jinru},
+ title = {Robust multigrid method for the planar linear elasticity problems},
+ journal = {Numer. Math.},
+ issue_date = {August 2009},
+ volume = {113},
+ number = {3},
+ month = aug,
+ year = {2009},
+ issn = {0029-599X},
+ pages = {473--496},
+ numpages = {24},
+ publisher = {Springer-Verlag New York, Inc.},
+ address = {Secaucus, NJ, USA},
+ keywords = {65F10, 65N12, 65N30},
+}
+
 %McAdams:2010:PMP:1921427.1921438,
 %url = {http://portal.acm.org/citation.cfm?id=1921427.1921438},
 %acmid = {1921438},
 @inproceedings{McAdams10,
  author = {McAdams, A. and Sifakis, E. and Teran, J.},
- title = {A parallel multigrid Poisson solver for fluids simulation on large grids},
+ title = {A parallel multigrid {P}oisson solver for fluids simulation on large grids},
  booktitle = {Proceedings of the 2010 ACM SIGGRAPH/Eurographics Symposium on Computer Animation},
  series = {SCA '10},
  year = {2010},
@@ -12,4 +226,26 @@
  numpages = {10},
  publisher = {Eurographics Association},
  address = {Aire-la-Ville, Switzerland, Switzerland},
+}
+
+%Zhu:2010:EMM:1731047.1731054
+%url = {http://doi.acm.org/10.1145/1731047.1731054},
+%doi = {10.1145/1731047.1731054},
+%acmid = {1731054},
+@article{Zhu.Yongning10,
+ author = {Zhu, Yongning and Sifakis, Eftychios and Teran, Joseph and Brandt, Achi},
+ title = {An efficient multigrid method for the simulation of high-resolution elastic solids},
+ journal = {ACM Trans. Graph.},
+ issue_date = {March 2010},
+ volume = {29},
+ number = {2},
+ month = apr,
+ year = {2010},
+ issn = {0730-0301},
+ pages = {16:1--16:18},
+ articleno = {16},
+ numpages = {18},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Deformable models, corotational linear elasticity, near-incompressible solids, parallel simulation},
 }
