--- a/dissertation/bib/SO.bib
+++ b/dissertation/bib/SO.bib
@@ -55,7 +55,7 @@ author = "Stanley J. Osher and Fadil Santosa"
 @incollection {Duysinx06,
    author = {Duysinx, Pierre and Miegroet, Laurent and Jacobs, Thibault and Fleury, Claude},
    affiliation = {University of Liège Automotive Engineering/Multidisciplinary Optimization, Aerospace and Mechanics Department Chemin des Chevreuils, 1, building B52 4000 Liège Belgium},
-   title = {Generalized Shape Optimization Using X-FEM and Level Set Methods},
+   title = {Generalized Shape Optimization Using {X-FEM} and Level Set Methods},
    booktitle = {IUTAM Symposium on Topological Design Optimization of Structures, Machines and Materials},
    series = {Solid Mechanics and Its Applications},
    editor = {Bendsøe, Martin Philip and Olhoff, Niels and Sigmund, Ole and Gladwell, G. M. L.},
@@ -87,7 +87,7 @@ author = "Stanley J. Osher and Fadil Santosa"
 %Wei_Wang_2008
 %url={http://doi.wiley.com/10.1002/nme.2785},
 @article{Wei.Peng08,
- title={A STRUCTURAL OPTIMIZATION METHOD WITH XFEM AND LEVEL SET},
+ title={A STRUCTURAL OPTIMIZATION METHOD WITH {XFEM} AND LEVEL SET},
  number={February},
  journal={Structural Optimization},
  author={Wei, Peng and Wang, Michael Yu},
