--- a/dissertation/bib/XFEM.bib
+++ b/dissertation/bib/XFEM.bib
@@ -37,6 +37,50 @@
  numpages = {21},
 }
 
+%Sukumar20016183
+%doi = "10.1016/S0045-7825(01)00215-8",
+%url = "http://www.sciencedirect.com/science/article/pii/S0045782501002158",
+@article{Sukumar01,
+title = "Modeling holes and inclusions by level sets in the extended finite-element method",
+journal = "Computer Methods in Applied Mechanics and Engineering",
+volume = "190",
+number = "46–47",
+pages = "6183 - 6200",
+year = "2001",
+note = "",
+issn = "0045-7825",
+author = "N. Sukumar and D.L. Chopp and N. Moës and T. Belytschko",
+keywords = "Extended finite-element method",
+keywords = "Level set method",
+keywords = "Voids",
+keywords = "Material interface",
+keywords = "Elastic inclusion"
+}
+
+%DOI: 10.1002/nme.169
+@article{Wagner01,
+title={The extended finite element method for rigid particles in {S}tokes flow},
+author={G.J. Wagner and N. Mo\"es and W. K. Liu and T. Belytschko},
+journal={International Journal for Numerical Methods in Engineering},
+volume={51},
+number={3},
+pages={293--313},
+month={May}
+year={2001},
+}
+
+%Chessa_Belytschko_2003
+%url={http://link.aip.org/link/JAMCAV/v70/i1/p10/s1&Agg=doi},
+@article{Chessa03,
+ title={An Extended Finite Element Method for Two-Phase Fluids},
+ volume={70},
+ number={1},
+ journal={ASME J of Appl Mech},
+ author={Chessa, J and Belytschko, T},
+ year={2003},
+ pages={10}
+}
+
 %doi = {10.1016/S0045-7825(03)00346-3},
 @article{Moes03,
  author = {N. Mo\"{e}s and M. Cloirec and P. Cartraud and J.F. Remacle},
@@ -48,6 +92,18 @@
  issue = {28--30},
  pages = {3163--3177},
  numpages = {15},
+}
+
+%Dolbow_Devan_2004
+%url={http://doi.wiley.com/10.1002/nme.862},
+@article{Dolbow04,
+ title={Enrichment of enhanced assumed strain approximations for representing strong discontinuities: addressing volumetric incompressibility and the discontinuous patch test},
+ volume={59},
+ number={1},
+ journal={International Journal for Numerical Methods in Engineering},
+ author={Dolbow, J E and Devan, A},
+ year={2004},
+ pages={47--67}
 }
 
 %doi = {10.1002/nme.1167},
@@ -63,10 +119,22 @@
  numpages = {28},
 }
 
+%DOI: 10.1002/fld.963
+@article{Coppola05,
+  title={Improving {E}ulerian two-phase flow finite element approximation with discontinuous gradient pressure shape functions},
+  author={A. H. Coppola-Own and R. Codina},
+  journal={International Journal for Numerical Methods in Fluids},
+  volume={49},
+  number={12},
+  pages={1287--1304},
+  month={December},
+  year={2005},
+}
+
 %doi = {10.1002/nme.1761},
 @article{Fries06,
  author = {Thomas-Peter Fries and Ted Belytschko},
- title = {The intrinsic xfem: a method for arbitrary discontinuities without additional unknowns},
+ title = {The intrinsic {XFEM}: a method for arbitrary discontinuities without additional unknowns},
  journal = {Int. J. Numer. Meth. Engng},
  month = {December},
  year = {2006},
@@ -79,7 +147,7 @@
 %doi = {10.1002/nme.1675},
 @article{Moes06,
  author = {Nicolas Mo\"{e}s and Eric B\'{e}chet and Matthieu Tourbier},
- title = {Imposing dirichlet boundary conditions in the extended finite element method},
+ title = {Imposing {D}irichlet boundary conditions in the extended finite element method},
  journal = {Int. J. Numer. Meth. Engng},
  month = {September},
  year = {2006},
@@ -122,13 +190,55 @@
 
 @article{Beale08,
  author = {J. Thomas Beale and Davod L. Chopp and Randall J. LeVeque and Zhilin Li},
- title = {Correction to the article a comparison of the extended finite element method with the immersed interface method for elliptic equations with discontinuous coefficients and singular sources by Vaughan et al.},
+ title = {Correction to the article a comparison of the extended finite element method with the immersed interface method for elliptic equations with discontinuous coefficients and singular sources by {V}aughan et al.},
  journal = {Comm. App. Math. and Comp. Sci.},
  year = {2008},
  volume = {3},
  number = {1},
  pages = {95--101},
  numpages = {17},
+}
+
+%Gerstenberger20081699
+%doi = "10.1016/j.cma.2007.07.002",
+%url = "http://www.sciencedirect.com/science/article/pii/S0045782507002915",
+@article{Gerstenberger08,
+title = "An e{X}tended {F}inite {E}lement Method/{L}agrange multiplier based approach for fluid–structure interaction",
+journal = "Computer Methods in Applied Mechanics and Engineering",
+volume = "197",
+number = "19–20",
+pages = "1699 - 1714",
+year = "2008",
+note = "<ce:title>Computational Methods in Fluid–Structure Interaction</ce:title>",
+issn = "0045-7825",
+author = "Axel Gerstenberger and Wolfgang A. Wall",
+keywords = "Fluid–structure interaction",
+keywords = "eXtended Finite Element Method",
+keywords = "Fixed grid",
+keywords = "Domain decomposition",
+keywords = "Mortar method",
+keywords = "Lagrange multiplier"
+}
+
+%Becker20093352
+%doi = "10.1016/j.cma.2009.06.017",
+%url = "http://www.sciencedirect.com/science/article/pii/S0045782509002230",
+@article{Becker09,
+title = "A {N}itsche extended finite element method for incompressible elasticity with discontinuous modulus of elasticity",
+journal = "Computer Methods in Applied Mechanics and Engineering",
+volume = "198",
+number = "41–44",
+pages = "3352 - 3360",
+year = "2009",
+note = "",
+issn = "0045-7825",
+author = "Roland Becker and Erik Burman and Peter Hansbo",
+keywords = "Nitsche’s method",
+keywords = "Extended finite element method",
+keywords = "Incompressible elasticity",
+keywords = "Stokes’ problem",
+keywords = "Discontinuous coefficients",
+keywords = "Surface tension"
 }
 
 %van der Bos:2009:NSP:1519550.1519824,
