--- a/dissertation/bib/quadrature.bib
+++ b/dissertation/bib/quadrature.bib
@@ -1,7 +1,7 @@
 %doi = {10.1002/nme.1620070316},
 @article{Cowper73,
  author = {G. R. Cowper},
- title = {Gaussian quadrature formulas for triangles},
+ title = {{G}aussian quadrature formulas for triangles},
  journal = {International Journal for Numerical Methods in Engineering},
  volume = {7},
  issue = {3},
