--- a/dissertation/dissertation.macros.tex
+++ b/dissertation/dissertation.macros.tex
@@ -22,14 +22,23 @@
 \newcommand{\bbR}{\mathbb{R}}
 
 \newcommand{\bff}{\mathbf{f}}
+\newcommand{\bfh}{\mathbf{h}}
 \newcommand{\bfn}{\mathbf{n}}
 \newcommand{\bfu}{\mathbf{u}}
 \newcommand{\bfx}{\mathbf{x}}
+\newcommand{\bfH}{\mathbf{H}}
 \newcommand{\bfI}{\mathbf{I}}
+\newcommand{\bfS}{\mathbf{S}}
+\newcommand{\bfV}{\mathbf{V}}
 
 \newcommand{\bsepsilon}{\boldsymbol{\epsilon}}
 \newcommand{\bssigma}{\boldsymbol{\sigma}}
 \newcommand{\bstau}{\boldsymbol{\tau}}
+
+\newcommand{\calC}{\mathcal{C}}
+\newcommand{\calG}{\mathcal{G}}
+\newcommand{\calN}{\mathcal{N}}
+\newcommand{\calP}{\mathcal{P}}
 
 \newcommand{\dOmega}{\partial\Omega}
 
@@ -45,5 +54,8 @@
 \providecommand{\jump}[1]{\lrb{#1}}
 \providecommand{\norm}[1]{\lrV{#1}}
 \providecommand{\set}[1]{\lrB{#1}}
+
+\newcommand{\ppartial}[2]{\frac{\partial #1}{\partial #2}}
+\newcommand{\pppartial}[3]{\frac{\partial^2 #1}{\partial #2 \partial #3}}
 
 \DeclareMathOperator{\tr}{tr}
