--- a/dissertation/bib/FDM.bib
+++ b/dissertation/bib/FDM.bib
@@ -26,9 +26,9 @@
 }
 
 %doi = {10.1016/0045-7825(94)90135-X},
-@article{Glowinski94,
+@article{Glowinski94a,
  author = {Roland Glowinski and Tsorng-Whay Pan and Jacques Periaux},
- title = {A fictitious domain method for Dirichlet problem and applications},
+ title = {A fictitious domain method for {D}irichlet problem and applications},
  journal = {Comput. Methods Appl. Mech. Engrg.},
  volume = {111},
  issue = {3--4},
@@ -37,13 +37,28 @@
  numpages = {31},
 }
 
+%Glowinski1994133
+%doi = "10.1016/0045-7825(94)90022-1",
+%url = "http://www.sciencedirect.com/science/article/pii/0045782594900221",
+@article{Glowinski94b,
+title = "A fictitious domain method for external incompressible viscous flow modeled by {N}avier-{S}tokes equations",
+journal = "Computer Methods in Applied Mechanics and Engineering",
+volume = "112",
+number = "1–4",
+pages = "133 - 148",
+year = "1994",
+note = "",
+issn = "0045-7825",
+author = "Roland Glowinski and Tsorng-Whay Pan and Jacques Periaux"
+}
+
 %Almgren:1997:CGP:271594.271602,
 %url = {http://portal.acm.org/citation.cfm?id=271594.271602},
 %doi = {10.1137/S1064827594273730},
 %acmid = {271602},
 @article{Almgren97,
  author = {Almgren, Ann S. and Bell, John B. and Colella, Phillip and Marthaler, Tyler},
- title = {A cartesian grid projection method for the incompressible euler equations in complex geometries},
+ title = {A {C}artesian grid projection method for the incompressible euler equations in complex geometries},
  journal = {SIAM J. Sci. Comput.},
  volume = {18},
  issue = {5},
@@ -55,6 +70,175 @@
  publisher = {Society for Industrial and Applied Mathematics},
  address = {Philadelphia, PA, USA},
  keywords = {Cartesian grid, incompressible Euler equations, projection method},
+}
+
+%Bertrand_Tanguy_Thibault_1997
+%url={http://doi.wiley.com/10.1002/%28SICI%291097-0363%2819970930%2925%3A6%3C719%3A%3AAID-FLD585%3E3.0.CO%3B2-K},
+@article{Bertrand97,
+ title={A three-dimensional fictitious domain method for incompressible fluid flow problems},
+ volume={25},  number={6},
+ journal={International Journal for Numerical Methods in Fluids},
+ author={Bertrand, F and Tanguy, P A and Thibault, F},
+ year={1997},
+ pages={719--736}
+}
+
+%Glowinski1999755
+%doi = "10.1016/S0301-9322(98)00048-2",
+%url = "http://www.sciencedirect.com/science/article/pii/S0301932298000482",
+@article{Glowinski99,
+title = "A distributed {L}agrange multiplier/fictitious domain method for particulate flows",
+journal = "International Journal of Multiphase Flow",
+volume = "25",
+number = "5",
+pages = "755 - 794",
+year = "1999",
+note = "",
+issn = "0301-9322",
+author = "R. Glowinski and T.-W. Pan and T.I. Hesla and D.D. Joseph",
+keywords = "particulate flow",
+keywords = "solid–liquid flow",
+keywords = "fictitious-domain method",
+keywords = "distributed Lagrange multiplier",
+keywords = "combined equation of motion",
+keywords = "operator splitting",
+keywords = "finite element"
+}
+
+%Glowinski:2001:FDA:512576.512579
+%url = {http://dx.doi.org/10.1006/jcph.2000.6542},
+%doi = {10.1006/jcph.2000.6542},
+%acmid = {512579},
+@article{Glowinski01,
+ author = {Glowinski, R. and Pan, T. W. and Helsa, T. I. and Joseph, D. D. and P{\'e}riaux, J.},
+ title = {A fictitious domain approach to the direct numerical simulation of incompressible viscous flow past moving rigid bodies: application to particulate flow},
+ journal = {J. Comput. Phys.},
+ issue_date = {May 30, 2001},
+ volume = {169},
+ number = {2},
+ month = may,
+ year = {2001},
+ issn = {0021-9991},
+ pages = {363--426},
+ numpages = {64},
+ publisher = {Academic Press Professional, Inc.},
+ address = {San Diego, CA, USA},
+ keywords = {Navier---Stokes equations, Rayleigh-Taylor instabilities, distributed Lagrange multipliers, fictitious domain methods, finite element methods, fluidization, liquid---solid mixtures, particulate flow, sedimentation, store separation},
+}
+
+%Biros:2004:FSS:965240.965256
+%url = {http://dx.doi.org/10.1016/j.jcp.2003.08.011},
+%doi = {10.1016/j.jcp.2003.08.011},
+%acmid = {965256},
+@article{Biros04,
+ author = {Biros, George and Ying, Lexing and Zorin, Denis},
+ title = {A fast solver for the {S}tokes equations with distributed forces in complex geometries},
+ journal = {J. Comput. Phys.},
+ issue_date = {January 2004},
+ volume = {193},
+ number = {1},
+ month = jan,
+ year = {2004},
+ issn = {0021-9991},
+ pages = {317--348},
+ numpages = {32},
+ publisher = {Academic Press Professional, Inc.},
+ address = {San Diego, CA, USA},
+ keywords = {Cartesian grid methods, double-layer potential, embedded domain methods, fast multipole methods, fast solvers, fictitious domain methods, immersed interface methods, integral equations, moving boundaries, stokes equations},
+}
+
+%Marella:2005:SIC:1103124.1103125
+%url = {http://dx.doi.org/10.1016/j.jcp.2005.03.031},
+%doi = {10.1016/j.jcp.2005.03.031},
+%acmid = {1103125},
+@article{Marella05,
+ author = {Marella, S. and Krishnan, S. and Liu, H. and Udaykumar, H. S.},
+ title = {Sharp interface {C}artesian grid method I: An easily implemented technique for 3{D} moving boundary computations},
+ journal = {J. Comput. Phys.},
+ issue_date = {20 November 2005},
+ volume = {210},
+ number = {1},
+ month = nov,
+ year = {2005},
+ issn = {0021-9991},
+ pages = {1--31},
+ numpages = {31},
+ publisher = {Academic Press Professional, Inc.},
+ address = {San Diego, CA, USA},
+ keywords = {Cartesian grid, Level-sets, Moving boundaries, Sharp interface method},
+}
+
+%Batty:2007:FVF:1276377.1276502
+%url = {http://doi.acm.org/10.1145/1276377.1276502},
+%doi = {10.1145/1276377.1276502},
+%acmid = {1276502},
+@article{Batty07,
+ author = {Batty, Christopher and Bertails, Florence and Bridson, Robert},
+ title = {A fast variational framework for accurate solid-fluid coupling},
+ journal = {ACM Trans. Graph.},
+ issue_date = {July 2007},
+ volume = {26},
+ number = {3},
+ month = jul,
+ year = {2007},
+ issn = {0730-0301},
+ articleno = {100},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {fluid simulation, fluid-solid coupling, physically-based animation},
+}
+
+%Parussini:2008:FDA:1459123.1459126
+%url = {http://dx.doi.org/10.1007/s10915-008-9212-x},
+%doi = {10.1007/s10915-008-9212-x},
+%acmid = {1459126},
+@article{Parussini08,
+ author = {Parussini, Lucia},
+ title = {Fictitious Domain Approach Via {L}agrange Multipliers with Least Squares Spectral Element Method},
+ journal = {J. Sci. Comput.},
+ issue_date = {December  2008},
+ volume = {37},
+ number = {3},
+ month = dec,
+ year = {2008},
+ issn = {0885-7474},
+ pages = {316--335},
+ numpages = {20},
+ publisher = {Plenum Press},
+ address = {New York, NY, USA},
+ keywords = {Fictitious Domain, Lagrange multipliers, Least Squares Spectral Element Method},
+}
+
+@article{Rutka08,
+title={A staggered grid-based explicit jump immersed interface method for two-dimensional {S}tokes flows},
+author={Rutka, V.},
+journal={International Journal for Numerical Methods in Fluids},
+volume={57},
+number={10},
+pages={1527--1543},
+year={2008},
+publisher={Wiley Online Library},
+}
+
+%Ng:2009:EFC:1630172.1630393
+%url = {http://dx.doi.org/10.1016/j.jcp.2009.08.032},
+%doi = {10.1016/j.jcp.2009.08.032},
+%acmid = {1630393},
+@article{Ng.YenTiang09,
+ author = {Ng, Yen Ting and Min, Chohong and Gibou, Fr{\'e}d{\'e}ric},
+ title = {An efficient fluid-solid coupling algorithm for single-phase flows},
+ journal = {J. Comput. Phys.},
+ issue_date = {December, 2009},
+ volume = {228},
+ number = {23},
+ month = dec,
+ year = {2009},
+ issn = {0021-9991},
+ pages = {8807--8829},
+ numpages = {23},
+ publisher = {Academic Press Professional, Inc.},
+ address = {San Diego, CA, USA},
+ keywords = {Hodge decomposition, Irregular domain, Navier-Stokes equations, Solid-fluid interaction},
 }
 
 %Parussini:2009:FDA:1519550.1519811,
@@ -77,13 +261,24 @@
  keywords = {Fictitious Domain approach, Lagrange multipliers, Least Squares Spectral Element Method, Navier-Stokes equations},
 }
 
+@article{Teran09,
+  title={Tether force constraints in {S}tokes flow by the immersed boundary method on a periodic domain},
+  author={Teran, J.M. and Peskin, C.S.},
+  journal={SIAM Journal on Scientific Computing},
+  volume={31},
+  number={5},
+  pages={3404--3416},
+  year={2009},
+  publisher={Society for Industrial and Applied Mathematics},
+}
+
 %Jomaa:2010:SEF:1751671.1751784,
 %url = {http://dx.doi.org/10.1016/j.jcp.2010.01.021},
 %doi = {http://dx.doi.org/10.1016/j.jcp.2010.01.021},
 %acmid = {1751784},
 @article{Jomaa10,
  author = {Jomaa, Z. and Macaskill, C.},
- title = {The Shortley-Weller embedded finite-difference method for the 3D Poisson equation with mixed boundary conditions},
+ title = {The {S}hortley-{W}eller embedded finite-difference method for the 3{D} {P}oisson equation with mixed boundary conditions},
  journal = {J. Comput. Phys.},
  volume = {229},
  issue = {10},
