--- a/dissertation/bib/MIB.bib
+++ b/dissertation/bib/MIB.bib
@@ -2,7 +2,7 @@
 %url = {http://dx.doi.org/10.1016/j.jcp.2005.07.022},
 %doi = {http://dx.doi.org/10.1016/j.jcp.2005.07.022},
 %acmid = {1140863},
-@article{Zhou.Y.C.06.03,
+@article{Zhou.YC06a,
  author = {Zhou, Y. C. and Zhao, Shan and Feig, Michael and Wei, G. W.},
  title = {High order matched interface and boundary method for elliptic equations with discontinuous coefficients and singular sources},
  journal = {J. Comput. Phys.},
@@ -22,9 +22,9 @@
 %url = {http://portal.acm.org/citation.cfm?id=1238654.1238670},
 %doi = {10.1016/j.jcp.2006.03.027},
 %acmid = {1238670},
-@article{Zhou.Y.C.06.11,
+@article{Zhou.YC06b,
  author = {Zhou, Y. C. and Wei, G. W.},
- title = {On the fictitious-domain and interpolation formulations of the matched interface and boundary (mib) method},
+ title = {On the fictitious-domain and interpolation formulations of the matched interface and boundary ({MIB}) method},
  journal = {J. Comput. Phys.},
  volume = {219},
  issue = {1},
@@ -44,7 +44,7 @@
 %acmid = {1297554},
 @article{Yu.Sining07,
  author = {Yu, Sining and Wei, G. W.},
- title = {Three-dimensional matched interface and boundary (mib) method for treating geometric singularities},
+ title = {Three-dimensional matched interface and boundary ({MIB}) method for treating geometric singularities},
  journal = {J. Comput. Phys.},
  volume = {227},
  issue = {1},
@@ -61,7 +61,7 @@
 %doi = {10.1002/nme.2473},
 @article{Zhao.Shan09,
  author = {Shan Zhao and G. W. Wei},
- title = {Matched interface and boundary (mib) for the implementation of boundary conditions in high-order central finite differences},
+ title = {Matched interface and boundary ({MIB}) for the implementation of boundary conditions in high-order central finite differences},
  journal = {Int. J. Numer. Meth. Engng},
  month = {March},
  year = {2009},
