--- a/dissertation/bib/petsc.bib
+++ b/dissertation/bib/petsc.bib
@@ -1,13 +1,13 @@
 @misc{petsc-web-page,
     Author  = "Satish Balay and Kris Buschelman and William D. Gropp and Dinesh Kaushik and Matthew G. Knepley and Lois Curfman McInnes and Barry F. Smith and Hong Zhang",
-    Title   = "PETSc Web page",
+    Title   = "{PETSc} Web page",
     Note    = "http://www.mcs.anl.gov/petsc",
     Year    = "2009"
 }
 
 @techreport{petsc-user-ref,
     Author      = "Satish Balay and Kris Buschelman and Victor Eijkhout and William D. Gropp and Dinesh Kaushik and Matthew G. Knepley and Lois Curfman McInnes and Barry F. Smith and Hong Zhang",
-    Title       = "PETSc Users Manual",
+    Title       = "{PETSc} Users Manual",
     Number      = "ANL-95/11 - Revision 3.0.0",
     Institution = "Argonne National Laboratory",
     Year        = "2008"
